<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <FrameLayout
            android:id="@+id/video_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        <com.infobip.webrtc.sdk.api.video.VideoRenderer
                android:id="@+id/remote_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:keepScreenOn="true" />

        <com.infobip.webrtc.sdk.api.video.VideoRenderer
                android:id="@+id/local_video"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_gravity="top|end"
                android:layout_margin="15dp" />
    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

        <LinearLayout
                android:id="@+id/other_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/application_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="120dp"
                    app:layout_constraintTop_toTopOf="parent" />

            <EditText
                    android:id="@+id/destination"
                    android:layout_width="200dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/destination_input_label"
                    android:inputType="text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@id/application_state" />

            <Button
                    android:id="@+id/call"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:text="@string/call_button_label"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/destination" />

            <Button
                    android:id="@+id/video_call"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/video_call_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/call" />

            <Button
                    android:id="@+id/call_phone_number"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/call_phone_number_button_label"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/video_call" />

            <Button
                    android:id="@+id/hangup"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/hangup_button_label"
                    android:visibility="gone"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/call_phone_number" />

            <Button
                    android:id="@+id/accept"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/accept_button_label"
                    android:visibility="gone"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/hangup" />

            <Button
                    android:id="@+id/decline"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/decline_button_label"
                    android:visibility="gone"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/accept" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/video_buttons"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

            <Button
                    android:id="@+id/video_hangup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hangup_button_label" />

            <Button
                    android:id="@+id/flip_camera_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/flip_camera" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>